fix overflow issue with footer text

--- a/css/style.scss
+++ b/css/style.scss
@@ -260,6 +260,8 @@ footer::before {
   left: 50%;
   margin-left: -315px;
   margin-top: -60pt;
+  height: 60pt;
+  overflow: hidden;
   content: 'Amy Hemmeter';
   font-size: 72pt;
   font-weight: 700;
